--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,19 @@
 h1{
     color: lightgreen;
     background-color: violet;
-<<<<<<< HEAD
     cursor: pointer;
-=======
 }
 
 body{
     background-color: black;
->>>>>>> feature/new-background
+    border: 5px solid violet;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
